# msg-arch

./: readme.txt
utility/common/source/common/: tools.h
utility/common/source/concurrency/: thread_pool.h
utility/common/source/container/: message_queue.h
utility/message_frame/source/mediator/: mediator.h  mediator_base.cpp  mediator_base.h
utility/message_frame/source/message/: content.h  content_base.h  handle.h  message.h  message_base.h
utility/message_frame/source/partner/: identifier.h  partner.h  partner_base.cpp  partner_base.h  partner_manager.h  partner_manager_base.cpp  partner_manager_base.h
utility/message_frame/source/transmitter/: process_transmitter.cpp  process_transmitter.h  thread_transmitter.cpp  thread_transmitter.h  transmitter.h  transmitter_manager.cpp  transmitter_manager.h
utility/message_frame/test/cmake/message_frame/: CMakeLists.txt  main.cpp
utility/rpc_frame/source/msgqueue/: msg_data.h
utility/rpc_frame/source/shared_memory/: sm_data.h  sm_manager.h  sm_processor.h
utility/rpc_frame/test/cmake/rpc_frame/: CMakeLists.txt  main.cpp
utility/rpc_frame/test/cmake/rpc_frame/main1/: CMakeLists.txt  main1.cpp
utility/rpc_frame/test/cmake/rpc_frame/main2/: CMakeLists.txt  main2.cpp
utility/rpc_frame/test/cmake/rpc_frame/main3/: CMakeLists.txt  main3.cpp
utility/rpc_frame/test/cmake/rpc_frame/main4/: CMakeLists.txt  main4.cpp
utility/rpc_frame/test/cmake/rpc_frame/main5/: CMakeLists.txt  main5.cpp
utility/rpc_frame/test/cmake/rpc_frame/main6/: CMakeLists.txt  main6.cpp
utility/soa_frame/source/service/: service.h  service_base.cpp  service_base.h  service_handle.h  service_id.h  service_manager.h  service_manager_base.cpp  service_manager_base.h  simple_service.cpp  simple_service.h
utility/soa_frame/test/cmake/soa_frame/: CMakeLists.txt  main.cpp
